Add more text and screencaps.

--- a/h5.md
+++ b/h5.md
@@ -802,10 +802,327 @@ I quit for the night @ 19.52.
 
 ## e) Intel. Etsi kolme loppuprojektia joltain vanhalta kurssitoteutukselta. Kuvaile projektit tiiviisti ja linkitä alkuperäiseeen raporttin. Vinkkejä: Loppuprojekteja löydät etsimällä opiskelijoiden raportteja vanhoilta kursseilta ja selailemalla sivuja, joilta ne löytyivät. Raportteja löytyy vanhojen kurssitotetusten kommenteista. Ja tietysti kannattaa silmäillä listaa sieltä täältä, niin näet eri projektit kuin muut. Voi hakea myös Googlella ja DuckDuckGolla. / Read and review 3 old projects of this course
 
+Started work @ 09.30ish
+
+### First article (in Finnish): [Joni Smolander](https://joni.tech.blog/2020/05/20/ph-h7/)
+
+Smolander decided to find out, if it's possible to control the states to be installed with filters. The filter he used wass the amount of memory. He also installed different web daemons to different slaves. For this, he used top.sls-file as a differentiator. 
+
+According to Smolander, the id for the minion should be  given on the minion-file as a "id: name"-parameter. The file for selecting the states for slaves is /srv/salt/top.sls.
+
+He had some initial troubles with his state, but he eventually triumphed over them. The problem he had was solved by moving the individual state-files to the same directory as top.sls and naming them in the way that he refenreces them in top.sls.
+
+### Second article (in Finnish): [Markus Saikkonen](https://markussaikkonen.wordpress.com/2020/05/21/7-oma-moduuli-nqinx-virtual-host/)
+
+The article was about installing Nginx and a virtualhost to a slave machine. Saikkonen used file, package and service from Salt to accomplish this. 
+
+### Third article (in Finnish): [Ville Mäntyranta](https://vimlinux.wordpress.com/2020/05/20/harjoitus-7/)
+
+Mäntyranta used Salt to install various programs with a top.sls-file. In the file he selected 3 different states to be installed to every slave machine. He used pkg-file-service in installing and running programs idempotently. 
+
 ## e) Lukua, ei luottamusta. Kokeile yhtä kohdassa d-Intel löytämääsi modulia koneella. Tämä on infraa koodina, joten luottamusta ei tarvita. Voit lukea koodista, mitä olet ajamassa. / Try out a peer module from previous course implementations
+
+I wanted to try out a module that used a top.sls-file, so I chose article [3](https://vimlinux.wordpress.com/2020/05/20/harjoitus-7/).
+
+My VM had Salt installed and a minion on the same VM up and running.
+
+```
+kallet@confmansys:~$ sudo salt '*'  test.ping
+[sudo] password for kallet: 
+confmansys:
+    True
+```
+
+I quit @ 10.11
+
+Started work @ 14.21.
+
+First I made a directory and a file for the Salt state.
+
+	sudo mkdir -p /srv/salt/apache
+	sudoedit /srv/salt/apache/init.sls
+
+```SaltStack
+apache2:
+ pkg.installed
+/var/www/html/index.html:
+ file.managed:
+   - source: salt://apache/default-index.html
+/etc/apache2/mods-enabled/userdir.conf:
+ file.symlink:
+   - target: ../mods-available/userdir.conf
+/etc/apache2/mods-enabled/userdir.load:
+ file.symlink:
+   - target: ../mods-available/userdir.load
+apache2service:
+ service.running:
+   - name: apache2
+   - watch:
+     - file: /etc/apache2/mods-enabled/userdir.conf
+     - file: /etc/apache2/mods-enabled/userdir.load
+```
+
+After that I created a default index for Apache.
+
+	sudoedit /srv/salt/apache/default-index.html 
+
+```
+Hello, this is a new Apache default site.
+```
+
+After this I tried the state out.
+	
+	sudo salt ‘*’ state.apply apache
+
+```
+Summary for confmansys
+------------
+Succeeded: 5 (changed=5) #1st run
+Failed:    0
+------------
+Total states run:     5
+Total run time:   7.799 s
+```
+
+```
+Summary for confmansys
+------------
+Succeeded: 5 #2nd run
+Failed:    0
+------------
+Total states run:     5
+Total run time:  94.339 ms
+```
+
+Just to be sure, I checked the browser.
+
+![Pic 8. Localhost was delivering the correct output](pics/h5/8.png)
+*Localhost output was as expected*  
+
+Next it was time for SSH.
+	
+	mkdir /srv/salt/sshd
+	sudoedit /srv/salt/sshd/init.sls
+
+```SaltStack
+openssh-server:
+ pkg.installed
+/etc/ssh/sshd_config:
+ file.managed:
+   - source: salt://sshd/sshd_config
+sshd:
+ service.running:
+   - watch:
+     - file: /etc/ssh/sshd_config
+```
+
+And next I created a config file for SSH.
+
+	sudoedit sshd_config
+	sudoedit /srv/salt/sshd/sshd_config
+
+```
+# DON'T EDIT - managed file, changes will be overwritten
+Port 8888
+Protocol 2
+HostKey /etc/ssh/ssh_host_rsa_key
+HostKey /etc/ssh/ssh_host_dsa_key
+HostKey /etc/ssh/ssh_host_ecdsa_key
+HostKey /etc/ssh/ssh_host_ed25519_key
+UsePrivilegeSeparation yes
+KeyRegenerationInterval 3600
+ServerKeyBits 1024
+SyslogFacility AUTH
+LogLevel INFO
+LoginGraceTime 120
+PermitRootLogin prohibit-password
+StrictModes yes
+RSAAuthentication yes
+PubkeyAuthentication yes
+IgnoreRhosts yes
+RhostsRSAAuthentication no
+HostbasedAuthentication no
+PermitEmptyPasswords no
+ChallengeResponseAuthentication no
+X11Forwarding yes
+X11DisplayOffset 10
+PrintMotd no
+PrintLastLog yes
+TCPKeepAlive yes
+AcceptEnv LANG LC_*
+Subsystem sftp /usr/lib/openssh/sftp-server
+UsePAM yes
+```
+
+Then I executed the state.
+	
+	sudo salt '*' state.apply sshd
+
+```
+Summary for confmansys
+------------
+Succeeded: 3 (changed=2) #1st run (I had a pkg installed already)
+Failed:    0
+------------
+Total states run:     3
+Total run time: 144.563 ms
+```
+
+```
+Summary for confmansys
+------------
+Succeeded: 3 #2nd run
+Failed:    0
+------------
+Total states run:     3
+Total run time:  92.629 ms
+```
+
+![Pic 9. I managed to connect to my server.](pics/h5/9.png)  
+*SSH was working for my server conneciton*  
+
+Next it was time to install Curl & Tree.
+
+    sudo mkdir /srv/salt/programs
+    sudoedit /srv/salt/programs/init.sls
+
+```SaltStack
+install_network_packages:
+  pkg.installed:
+    - pkgs:
+      - tree
+      - curl
+```
+	
+	sudo salt '*' state.apply programs
+
+```
+Summary for confmansys
+------------
+Succeeded: 1 (changed=1) #1st run (Curl was already installed)
+Failed:    0
+------------
+Total states run:     1
+Total run time:   2.518 s
+```
+
+```
+Summary for confmansys
+------------
+Succeeded: 1 #2nd run
+Failed:    0
+------------
+Total states run:     1
+Total run time:  54.078 ms
+```
+
+	curl https://www.paiste.fi |grep title
+
+```
+ % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
+                                 Dload  Upload   Total   Spent    Left  Speed
+  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0  <title>Lounasravintola Paiste</title>
+          <h2 class="card-title"><br>Suolakivenkatu</h2>
+          <h2 class="card-title"><br>
+100 11347  100 11347    0     0   120k      0 --:--:-- --:--:-- --:--:--  119k
+```
+	
+	tree /srv/salt
+	
+
+![Pic 10. Tree was working properly](pics/h5/10.png)  
+*Tree was working*  
+
+The last thing to do was to create the top.sls that contained instructions on what to install to which minion. The source had a faulty syntax (no intendations), so I added those right out of the bat.
+	
+	sudoedit /srv/salt/top.sls
+	
+```SaltStack
+base:
+  '*':
+    - apache
+    - sshd
+    - programs
+```
+
+To test the module, I removed all of the files and folders that it referenced to and checked that they were indeed not operational.
+
+	sudo rm /var/www/html/index.html
+	sudo systemctl stop apache2.service
+	sudo apt-get purge -y apache2*
+	sudo rm /etc/ssh/sshd_config
+	sudo systemctl stop sshd
+	sudo apt-get purge -y ssh*
+	sudo apt-get purge -y curl tree
+		
+**Tests**
+
+	curl
+	sudo systemctl start ssh
+	sudo systemctl start apache2.service
+	tree
+
+![Pic 11. Not a thing was left](pics/h5/11.png)  
+*The state had been cancelled*  
+  
+To apply the state again, I executed it.
+	
+	sudo salt '*' state.highstate
+
+I had missed a spot.
+
+```
+----------
+          ID: openssh-server
+    Function: pkg.installed
+      Result: True
+     Comment: All specified packages are already installed
+     Started: 15:10:12.227259
+    Duration: 670.767 ms
+     Changes:   
+----------
+```
+
+Otherwise the state did everything perfectly.
+
+```
+Summary for confmansys
+------------
+Succeeded: 9 (changed=8) #1st run
+Failed:    0
+------------
+Total states run:     9
+Total run time:   9.232 s
+```
+
+```
+Summary for confmansys
+------------
+Succeeded: 9 #2nd run
+Failed:    0
+------------
+Total states run:     9
+Total run time: 147.805 ms
+```
+
+To verify the results I curled localhost, used tree and connected to my remote server with ssh.
+
+	curl localhost
+	tree
+	ssh user@ip
+
+![Pic 12. A module was implemented to production](pics/h5/12.png)  
+*top.sls was implemented to a good use*  
+
+```
+Last login: Sun May  1 11:42:05 2022 from 88.192.36.61
+sukalle@Fenix:~$ 
+```
 
 ## f) Palauta linkki raporttiisi Laksuun. / Return your work to the peer review platform of this course
 
+The assingment was returned to the platform.
+
 ## g) Anna palaute kahdelle opiskelukaverille Laksussa. (Täsmennys: siis tästä tehtävästä h5) / Give feedback to 2 peers on the platform
 
-## i) Vapaaehtoinen: The drill. Ota uusi virtuaalikone. Ota snapshot (tai käytä Vagrantia). Rakenna perusasiat: Hei Saltin maailma, herra-orja, package-file-service, git clone. Kokeile että kaikki toimii. Palaa alkuun (palauta snapshot tai 'vagrant destroy'). Toista. Toista. / Do some drilling from scratch
+I reviewed 3 peer works.
