--- a/h5.md
+++ b/h5.md
@@ -120,7 +120,7 @@ Total states run:     1
 Total run time:   6.130 ms
 ```
 
-No changes validated my case, so I knew how to check for a file and make sure it was where it was supposed to be. The next thing was to make the shell script to print out "Hello World". [Source](https://www.cyberciti.biz/faq/hello-world-bash-shell-script/)
+No changes validated my case, so I knew how to check for a file and make sure it was where it was supposed to be. The next thing was to make the shell script to print out "Hello World". [Source](https://www.cyberciti.biz/faq/hello-world-bash-shell-script/).
 
 	nano helloworld
 
@@ -190,7 +190,7 @@ local:
     ID /usr/local/bin/helloworld in SLS helloworld is not a dictionary
 ```
 
-So, I fixed my state. I renamed the bash file to .sh-type.
+So, I fixed my state. I also renamed the bash file to .sh-type.
 
 	sudo mv /srv/salt/helloworld/helloworld /srv/salt/helloworld/helloworld.sh
 
@@ -246,6 +246,7 @@ I modified my state and made my file lose it's file extension, since it was not 
 ```
 
 Then I checked the octal number user rights and removed the manually moved file.
+	
 	stat /usr/local/bin/helloworld
 	sudo rm /usr/local/bin/helloworld
 	
@@ -334,7 +335,7 @@ master: 10.0.2.15
 	sudo salt-key -A confmansys
 
 ![Pic 2. Accepted the key](pics/h5/2.png)  
-*The key was accepted*  7
+*The key was accepted*  
 
 ```
 kallet@confmansys:~$ sudo salt '*'  test.ping
@@ -515,7 +516,7 @@ uname -a
 	bash hello
 
 ![Pic 3. Weather, date, network & hw](pics/h5/3.png)  
-*My prinout looked reasonably good*  
+*My printout looked reasonably good*  
 
 I quit @ 17.05.
 
@@ -633,7 +634,7 @@ After this I did a directory for Salt, a state in the directory, copied my progr
 
 ## d) Laiskaa skriptailua. Tee kansio, josta jokainen skripti kopioituu orjille. Vinkki: 'salt-call --local sys.state_doc file.recurse'. Kun tämä on valmis, on todella helppoa laittaa orjille mikä tahansa yhden tiedoston shell script, Python-ohjelma, Perl-ohjelma, Go-binääri tai muu yhden binäärin ohjelma. / Make a folder containing your scripts and copy those to minions
 
-I started my looking into the documentation.
+I started my problem solving by looking into the documentation.
 
 	sudo salt-call --local sys.state_doc file.recurse
 
@@ -722,7 +723,7 @@ Total run time:  45.668 ms
       - group
 ```
 
-That worked out, so I needed to figure the user rights out. I don't understand the benefit of the change in function name for individual files or many files, but the earlier error message told me a solution.
+That worked out, so I needed to figure the user rights out. I don't understand the benefit of the change in function's parameter name for individual files or many files, but the earlier error message told me a solution.
 
 ```SaltStack
 /usr/local/bin:
@@ -785,7 +786,7 @@ Total states run:     1
 Total run time:  33.699 ms
 ```
 
-![pic 7. Scripts executed great](pics/h5/1.png)  
+![pic 7. Scripts executed great](pics/h5/7.png)  
 *The scripts executed great*  
 
 As a final check, I listed the user rights for my scripts.
@@ -810,7 +811,7 @@ Smolander decided to find out, if it's possible to control the states to be inst
 
 According to Smolander, the id for the minion should be  given on the minion-file as a "id: name"-parameter. The file for selecting the states for slaves is /srv/salt/top.sls.
 
-He had some initial troubles with his state, but he eventually triumphed over them. The problem he had was solved by moving the individual state-files to the same directory as top.sls and naming them in the way that he refenreces them in top.sls.
+He had some initial troubles with his state, but he eventually triumphed over them. The problem he had was solved by moving the individual state-files to the same directory as top.sls and naming them in the way that he refenreces them in top.sls. **update: It became obvious to me that you don't have to store the files in the same directory as the top.sls file. See the third article & my implementation at the next part of this article for reference**
 
 ### Second article (in Finnish): [Markus Saikkonen](https://markussaikkonen.wordpress.com/2020/05/21/7-oma-moduuli-nqinx-virtual-host/)
 
@@ -899,7 +900,9 @@ Just to be sure, I checked the browser.
 ![Pic 8. Localhost was delivering the correct output](pics/h5/8.png)
 *Localhost output was as expected*  
 
-Next it was time for SSH.
+The tests in the article don't test for userdirs, so neither did I.
+
+Next it was time for sshd.
 	
 	mkdir /srv/salt/sshd
 	sudoedit /srv/salt/sshd/init.sls
@@ -916,7 +919,7 @@ sshd:
      - file: /etc/ssh/sshd_config
 ```
 
-And next I created a config file for SSH.
+And next I created a config file for sshd.
 
 	sudoedit sshd_config
 	sudoedit /srv/salt/sshd/sshd_config
