Make corrections, add end time.

--- a/h5.md
+++ b/h5.md
@@ -897,7 +897,7 @@ Total run time:  94.339 ms
 
 Just to be sure, I checked the browser.
 
-![Pic 8. Localhost was delivering the correct output](pics/h5/8.png)
+![Pic 8. Localhost was delivering the correct output](pics/h5/8.png)  
 *Localhost output was as expected*  
 
 The tests in the article don't test for userdirs, so neither did I.
@@ -1128,4 +1128,6 @@ The assingment was returned to the platform.
 
 ## g) Anna palaute kahdelle opiskelukaverille Laksussa. (Täsmennys: siis tästä tehtävästä h5) / Give feedback to 2 peers on the platform
 
-I reviewed 3 peer works.
+I will review 3 peer works after commiting this work to the platform.
+
+I quit @ 16.09 and started the reviews for my peers.
