--- a/h6.md
+++ b/h6.md
@@ -24,15 +24,17 @@ This article also provides instructions on how to install a package manager for 
 
 I downloaded the closest version to my Linux Salt (3002.6) to my Windows (3002.8). After that I read and followed the instructions on: https://docs.saltproject.io/en/latest/topics/installation/windows.html
 
-	1. Download the installer from [Saltproject](https://repo.saltproject.io/windows/). Direct link to the version I used: https://repo.saltproject.io/windows/Salt-Minion-3002.8-1-Py3-AMD64.msi
-	2. Open the installer with admin rights (ie. win + x -> Windows terminal admin -> go to your download dir and run the installer)
+1. Download the installer from [Saltproject](https://repo.saltproject.io/windows/). Direct link to the version I used: https://repo.saltproject.io/windows/Salt-Minion-3002.8-1-Py3-AMD64.msi
+2. Open the installer with admin rights (ie. win + x -> Windows terminal admin -> go to your download dir and run the installer)
 
-	![Pic 1. Salt Minion  installer](pics/h6/1.png)
+![Pic 1. Salt Minion  installer](pics/h6/1.png)  
+*The installed looked like this*
 
-	3. I specified the master as saltmaster and let the minion be as the one the installer suggested
-	4. After that I tried out a version check in cmd
+3. I specified the master as saltmaster and let the minion be as the one the installer suggested
+4. After that I tried out a version check in cmd
 
-	![2. pic. Salt didn't work](pics/h6/2.png)
+![2. pic. Salt didn't work](pics/h6/2.png)  
+*Couldn't get Salt to work*
 
 I was quite clueless on what I should try, so I googled. Maybe the Windows version was to fault, as I had Win 11 instead of Windows 10? So the nextr thing in line was to try it out on Win 10. For that I needed a copy, and a good place to get one was [Microsoft](https://developer.microsoft.com/en-us/microsoft-edge/tools/vms/). You need VirtualBox to use these VM's.
 
@@ -41,7 +43,7 @@ I downloaded the same msi-pkg for my VM. After that I pressed:
 	win + x
 	-> Windows PowerShell (Admin)
 
-![3. pic. How to run Powershell as Admin](pics/h6/3.png)
+![3. pic. How to run Powershell as Admin](pics/h6/3.png)  
 *This was how I ran Powershell with admin rights*  
 
 After that I copied my installer to a temp directory I created and navigated there to execute it.
@@ -53,27 +55,27 @@ After that I copied my installer to a temp directory I created and navigated the
 
 I clicked next and accepted the licence agreement until I reached the settings screen, which I left as it was.
 
-![4. pic. Salt settings](pics/h6/4.png)
+![4. pic. Salt settings](pics/h6/4.png)  
 *Salt settings*  
 
-![5. pic. Salt test](pics/h6/5.png)
+![5. pic. Salt test](pics/h6/5.png)  
 *Still the same error*  
 
-The installer had created a salt-folder in c:\. I navigated there and there I could execute *.bat-files, that are Windows script files (from my knowledge of Windows in the 90's). 
+The installer had created a salt-folder in the root of c. I navigated there and there I could execute *.bat-files, that are Windows script files (from my knowledge of Windows in the 90's). 
 
-![6. pic. Salt test from the salt directory](pics/h6/6.png)
+![6. pic. Salt test from the salt directory](pics/h6/6.png)  
 *Salt was working from it's directory*  
 
-![7. pic. Salt 2nd test from the salt directory](pics/h6/7.png)
+![7. pic. Salt 2nd test from the salt directory](pics/h6/7.png)  
 *It kinda worked*  
 
 I realized that Salt worked for my Win 11 too with the same principle:
 
-	1. Navigate to salt foldel
+	1. Navigate to salt folder
 	2. Execute *.bat files
 
-![8. pic. Salt 3rd test from the salt directory](pics/h6/8.png)
-*It kinda worked for Win 11 too*  
+![8. pic. Salt 3rd test from the salt directory](pics/h6/8.png)  
+*It worked for Win 11 too*  
 
 ## b) Single. Näytä komentorivillä Saltilla (state.single) esimerkit funktioista file ja cmd. / State.single with Windows
 
@@ -107,7 +109,7 @@ That actually executed! So next I tried out the file and cmd.
 	
 	.\salt-call.bat --local state.single cmd.run "echo foo"
 
-![Pic 9. Salt-call in Windows 11](pics/h6/9.png)
+![Pic 9. Salt-call in Windows 11](pics/h6/9.png)  
 *cmd.run worked in Win 11*
 	
 	.\salt-call.bat --local state.single file.managed c:\temp\foobar
@@ -170,7 +172,7 @@ Next I tried giving the path as a part of the command, because why not?
 
 The same error message persisted, so I decided to Google where in env 'base' actually located. The link headlines gave me an idea to look into the conf.
 	
-	#Open the conf in c:}salt\conf\minion
+	#Open the conf in c:\salt\conf\minion
 	
 ```SaltStack
 file_roots:
@@ -213,7 +215,7 @@ local:
     ID c:/temp/test.txt in SLS firststate is not a dictionary
 ```
 
-Next I tried to change the / symbol to \.
+Next I tried to change the /-symbol to \.
 
 ```SaltStack
 c:\temp\test.txt:
