--- a/h7.md
+++ b/h7.md
@@ -14,7 +14,7 @@ The source for the exercise [h7](https://terokarvinen.com/2021/configuration-man
 
 ## A development and testing environment for Django
 
-![Pic 1. Django-admin ready for users](pics/h7/1.png)
+![Pic 1. Django-admin ready for users](pics/h7/1.png)  
 *Django-admin console ready for logging in*
 
 Finished state: https://github.com/kalletolonen/djangoadmin
@@ -27,7 +27,7 @@ Requirements for using the state:
 Debian 11
 Salt-minion installed
 
-You'll be able to apply the project on your own development server by copying the contents or the finished state to /srv/salt/djangoadmin and then running the command:
+You'll be able to apply the project on your own development server by copying the contents or the finished state to **/srv/salt/djangoadmin** and then running the command:
 		
 	salt-state --local state.apply djangoadmin
 	
