Add notes, add more content to final article.

--- a/h7.md
+++ b/h7.md
@@ -1,6 +1,6 @@
 # **h7 Oma Moduli / My own module**
 
-**Kalle Tolonen**
+**[Kalle Tolonen](https://www.linkedin.com/in/kalletolonen/)**
 
 The source for the exercise [h7](https://terokarvinen.com/2021/configuration-management-systems-2022-spring/#h7-oma-moduli)
   
@@ -12,12 +12,13 @@ The source for the exercise [h7](https://terokarvinen.com/2021/configuration-man
 *Mem: 16 Gt LPDDR4X*  
 *Storage: 512 Gt M.2 2230 NVMe PCIe 3.0 SSD*  
 
-## A development and testing environment for Django
+##How to make a base development and testing environment for Django
 
 ![Pic 1. Django-admin ready for users](pics/h7/1.png)  
 *Django-admin console ready for logging in*
 
 Finished state: https://github.com/kalletolonen/djangoadmin
+Licence for the state: GPL 2.0
 
 The purpose of this article is to show the process and method of creating a Salt State for a development server for Django.
 
